--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 			<div id="wrapper">
 
 				<!-- Nav -->
-				<nav id="nav">
-					<a href="#" class="icon solid fa-home"><span>Home</span></a>
-					<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
-					<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
-					<!-- <a href="https://twitter.com/ajlkn" class="icon brands fa-twitter"><span>Twitter</span></a> -->
-				</nav>
+					<nav id="nav">
+						<a href="#" class="icon solid fa-home"><span>Home</span></a>
+						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
+						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
+						<!-- <a href="https://twitter.com/ajlkn" class="icon brands fa-twitter"><span>Twitter</span></a> -->
+					</nav>
 
 				<!-- Main -->
 					<div id="main">
@@ -42,13 +42,12 @@
 									<h2>Check it out</h2>
 								</header>
 								<p>
-									Here are a bunch of projects that I created.
+									Here are bunch of projects that I created.
 								</p>
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://github.com/stevenbanilbo/3-column-preview-card-component-main.git" class="image fit"><img src="images/3-column-card.png" alt="3-column-card"></a>
-
 										</div>
 									
 									</div>
