--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>Steven Banilbo</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -47,7 +47,7 @@
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://github.com/stevenbanilbo/3-column-preview-card-component-main.git" class="image fit"><img src="images/3-column-card.png" alt="3-column-card"></a>
+											<a href="https://stevenbanilbo.github.io/3-column-preview-card-component-main/" class="image fit"><img src="images/3-column-card.png" alt="3-column-card"></a>
 										</div>
 									
 									</div>
