--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://stevenbanilbo.github.io/flexbox-dummy/" class="image fit"><img src="images/todd.png" alt="flexbox-dummy"></a>
 										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="https://stevenbanilbo.github.io/Navbars/" class="image fit"><img src="images/navbar-cover.PNG" alt="Navbar"></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="https://stevenbanilbo.github.io/WeatherAPI/" class="image fit"><img src="images/weather.PNG" alt="Weather-API"></a>
+										</div>
 									</div>
 								</section>
 							</article>
