--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 											<a href="https://stevenbanilbo.github.io/3-column-preview-card-component-main/" class="image fit"><img src="images/3-column-card.png" alt="3-column-card"></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
+											<a href="https://stevenbanilbo.github.io/Vertical-Slider/" class="image fit"><img src="images/slider.PNG" alt="Vertical-Slider"></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://stevenbanilbo.github.io/percentage-calculator/" class="image fit"><img src="images/percentagecalculator.png" alt="percentage-calculator"></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
